# InitGL

./: .gitignore  CMakeLists.txt
source/: main.cpp  main.h
source/ShaderInterface/: ShaderInterface.cpp  ShaderInterface.h
source/ShaderReader/: ShaderReader.cpp  ShaderReader.h
source/Testing/: testing.cpp  testing.h
source/Testing/shaders/: testing.frag  testing.vert
